<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/TextAppearance.AppCompat.Title"
        android:textSize="30dp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:paddingTop="50dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif-smallcaps"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="sans-serif-smallcaps"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_baseline_key_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/password"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:fontFamily="sans-serif-smallcaps"            android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_ex"
        android:textStyle="bold"
        android:id="@+id/toSignup"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/forgot"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/toSignup"
        />

</androidx.constraintlayout.widget.ConstraintLayout>