<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/layout_group_chat"
        android:orientation="horizontal"
        android:background="@color/purple_500"
        android:weightSum="1"
        tools:ignore="MissingConstraints">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/img"
            android:id="@+id/curr_img"
            app:riv_corner_radius="25dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:id="@+id/curr_name"
            />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gchat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
        app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />

    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:layout_marginStart="16dp"
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/linear"
            android:background="@android:color/transparent"
            android:hint="@string/hint_enter_msg"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/linear"
            android:layout_height="60dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_gchat_img_send"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/send_message"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_gchat_send"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/send_message"
                android:src="@drawable/ic_baseline_send_24" />

        </LinearLayout>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>